[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Sean Champ", email = "spchamp@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "urllib3>=1.25.3",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.8.4",
    "aiohttp-retry>=2.8.3",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
]
name = "pynwsdata"
version = "0.0.1"
description = "Client interface for the weather.gov Web API"
readme = "README.md"

# [project.urls]
# repository = "https://github.com/FIXME/TBD"

[project.optional-dependencies]
dev = [
    "pdm",
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",
    "types-python-dateutil>=2.8.19.14",
    "mypy==1.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pdm.build]
includes = ["src/pynwsdata/py.typed"]

[tool.mypy]
files = [
  "src", "test"
]
