[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Sean Champ", email = "spchamp@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aenum",
    "httpcore[http2]",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.8.4",
    "aiohttp-retry>=2.8.3",
    "geopy",
    "NetCDF4",
    "numpy",
    "ujson",
    "pint",
    "pint-xarray",
    "pyfields>=1.7.2",
    "shapely",
    "timedelta-isoformat",
    "typing-extensions>=4.7.1",
    "xarray",
]
name = "pynwsdata"
version = "0.0.3"
description = "Client interface for the weather.gov Web API (unofficial)"
readme = "README.md"

[project.urls]
source = "https://github.com/pyecolog/pynwsdata"

[project.optional-dependencies]
dev = [
    "packaging",
    "pdm",
    "deptry",
    "python-dotenv",
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",
    "types-python-dateutil>=2.8.19.14",
    "mypy==1.4.1",
]
shell = [
    "ipython", "qtconsole"
]
m = [
    "matlabengine"
]
doc = [
    "sphinx",
    "numpydoc",
    "sphinx-autodoc2",
]
doc_mkd = [
    "mkdocs",
    "mkdocstrings[python]",
    "pydata-sphinx-theme"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pdm.build]
includes = [
    "src/pynwsdata/py.typed",
    "src/pynwsdata/version",
    "src/pynwsdata/units/README.md",
    "src/pynwsdata/units/wmo.csv",
]

[tool.mypy]
files = ["src", "test"]
